[dependencies]
async-trait = {workspace = true}
common-runtime = {path = "../common/runtime", default-features = false}
common-daft-config = {path = "../common/daft-config", default-features = false}
common-error = {path = "../common/error", default-features = false}
common-metrics = {path = "../common/metrics", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
daft-micropartition = {path = "../daft-micropartition", default-features = false}
daft-dashboard = {path = "../daft-dashboard", default-features = false}
daft-runners = {workspace = true}
pyo3 = {workspace = true, optional = true}
log = {workspace = true}
# For debug subscriber
dashmap = {workspace = true}
# Client for submitting to dashboard server
reqwest = {workspace = true, default-features = false}

[features]
python = [
  "dep:pyo3",
  "common-daft-config/python",
  "common-error/python",
  "common-metrics/python",
  "daft-core/python",
  "daft-logical-plan/python",
  "daft-micropartition/python",
  "daft-runners/python",
  "daft-recordbatch/python"
]

[lints]
workspace = true

[package]
name = "daft-context"
edition.workspace = true
version.workspace = true
