[dependencies]
daft-common = {workspace = true}
daft-core = {path = "../daft-core", version = "0.7.9", default-features = false}
daft-logical-plan = {path = "../daft-logical-plan", version = "0.7.9", default-features = false}
daft-micropartition = {path = "../daft-micropartition", version = "0.7.9", default-features = false}
daft-dashboard = {path = "../daft-dashboard", version = "0.7.9", default-features = false}
pyo3 = {workspace = true, optional = true}
log = {workspace = true}
# For debug subscriber
dashmap = {workspace = true}
# Client for submitting to dashboard server
reqwest = {workspace = true, default_features = false}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true, features = ["v4"]}

[features]
python = [
  "daft-common/python",
  "dep:pyo3",
  "daft-core/python",
  "daft-logical-plan/python",
  "daft-micropartition/python",
]

[lints]
workspace = true

[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
name = "daft-context"
edition.workspace = true
version.workspace = true
