[dependencies]
common-runtime = {path = "../common/runtime", default-features = false, version = "0.3.0-dev0"}
common-daft-config = {path = "../common/daft-config", default-features = false, version = "0.3.0-dev0"}
daft-common-error = {path = "../common/error", default-features = false, version = "0.3.0-dev0"}
common-metrics = {path = "../common/metrics", default-features = false, version = "0.3.0-dev0"}
daft-core = {path = "../daft-core", default-features = false, version = "0.3.0-dev0"}
daft-logical-plan = {path = "../daft-logical-plan", default-features = false, version = "0.3.0-dev0"}
daft-micropartition = {path = "../daft-micropartition", default-features = false, version = "0.3.0-dev0"}
daft-dashboard = {path = "../daft-dashboard", default-features = false, version = "0.3.0-dev0"}
daft-runners = {workspace = true}
pyo3 = {workspace = true, optional = true}
log = {workspace = true}
# For debug subscriber
dashmap = {workspace = true}
# Client for submitting to dashboard server
reqwest = {workspace = true, default_features = false}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true, features = ["v4"]}

[features]
python = [
  "dep:pyo3",
  "common-daft-config/python",
  "daft-common-error/python",
  "common-metrics/python",
  "daft-core/python",
  "daft-logical-plan/python",
  "daft-micropartition/python",
  "daft-runners/python"
]

[lints]
workspace = true

[package]
name = "daft-context"
repository = {workspace = true}
license = {workspace = true}
description = "Execution context for Daft"
edition.workspace = true
version.workspace = true
