[dependencies]
arrow = {workspace = true}
arrow-row = {workspace = true}
bincode = {workspace = true}
bytemuck = {version = "1", features = ["derive"]}
chrono = {workspace = true}
chrono-tz = {workspace = true}
comfy-table = {workspace = true}
common-arrow-ffi = {path = "../common/arrow-ffi", version = "0.7.9", default-features = false, optional = true}
daft-common = {workspace = true}
common-image = {workspace = true}
daft-hash = {workspace = true}
daft-minhash = {path = "../daft-minhash", version = "0.7.9", default-features = false}
daft-schema = {path = "../daft-schema", version = "0.7.9", default-features = false}
derive_more = {workspace = true}
fastrand = "2.1.0"
smallvec = {workspace = true}
hashbrown = {workspace = true}
html-escape = {workspace = true}
image = {workspace = true, features = [
  "gif",
  "jpeg",
  "ico",
  "png",
  "tiff",
  "webp",
  "bmp",
  "hdr"
]}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mur3 = "0.1.0"
num-traits = {workspace = true}
pyo3 = {workspace = true, optional = true}
rand = {workspace = true}
serde = {workspace = true}
sketches-ddsketch = {workspace = true}
xxhash-rust = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[features]
python = [
  "daft-common/python",
  "dep:common-arrow-ffi",
  "common-image/python",
  "daft-schema/python",
  "dep:pyo3"
]

[lints]
workspace = true

[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = {workspace = true}
name = "daft-core"
version = {workspace = true}
description = "Core data types, arrays, and series for the Daft query engine"
