[dependencies]
arrow2 = {workspace = true, features = ["io_csv", "io_csv_async"]}
async-compat = {workspace = true}
async-stream = {workspace = true}
common-error = {path = "../common/error", default-features = false}
common-py-serde = {path = "../common/py-serde", default-features = false}
common-runtime = {path = "../common/runtime", default-features = false}
csv-async = "1.3.0"
daft-compression = {path = "../daft-compression", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-decoding = {path = "../daft-decoding"}
daft-dsl = {path = "../daft-dsl", default-features = false}
daft-io = {path = "../daft-io", default-features = false}
daft-table = {path = "../daft-table", default-features = false}
futures = {workspace = true}
memchr = "2.7.2"
parking_lot = "0.12.3"
pyo3 = {workspace = true, optional = true}
rayon = {workspace = true}
serde = {workspace = true}
smallvec = "1.13.2"
snafu = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[features]
python = ["dep:pyo3", "common-error/python", "common-py-serde/python", "daft-core/python", "daft-io/python", "daft-table/python", "daft-dsl/python"]

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-csv"
version = {workspace = true}
