[dependencies]
arrow-schema = {workspace = true}
async-compat = {workspace = true}
async-stream = {workspace = true}
daft-common = {workspace = true}
csv = {workspace = true}
csv-async = "1.3.0"
daft-core = {path = "../daft-core", version = "0.7.9", default-features = false}
daft-dsl = {path = "../daft-dsl", version = "0.7.9", default-features = false}
daft-io = {path = "../daft-io", version = "0.7.9", default-features = false}
daft-recordbatch = {path = "../daft-recordbatch", version = "0.7.9", default-features = false}
daft-schema = {path = "../daft-schema", version = "0.7.9", default-features = false}
futures = {workspace = true}
memchr = "2.7.6"
parking_lot = {workspace = true}
pyo3 = {workspace = true, optional = true}
rayon = {workspace = true}
serde = {workspace = true}
smallvec = {workspace = true}
snafu = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[features]
python = ["dep:pyo3", "daft-common/python", "daft-core/python", "daft-io/python", "daft-recordbatch/python", "daft-dsl/python"]

[lints]
workspace = true

[package]
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = {workspace = true}
name = "daft-csv"
version = {workspace = true}
description = "CSV reader and writer for Daft"
