[dependencies]
arrow-schema = {workspace = true}
async-compat = {workspace = true}
async-stream = {workspace = true}
daft-common-error = {path = "../common/error", default-features = false, version = "0.3.0-dev0"}
common-py-serde = {path = "../common/py-serde", default-features = false, version = "0.3.0-dev0"}
common-runtime = {path = "../common/runtime", default-features = false, version = "0.3.0-dev0"}
csv = {workspace = true}
csv-async = "1.3.0"
daft-compression = {path = "../daft-compression", default-features = false, version = "0.3.0-dev0"}
daft-core = {path = "../daft-core", default-features = false, version = "0.3.0-dev0"}
daft-decoding = {path = "../daft-decoding", version = "0.3.0-dev0"}
daft-dsl = {path = "../daft-dsl", default-features = false, version = "0.3.0-dev0"}
daft-io = {path = "../daft-io", default-features = false, version = "0.3.0-dev0"}
daft-recordbatch = {path = "../daft-recordbatch", default-features = false, version = "0.3.0-dev0"}
daft-schema = {path = "../daft-schema", default-features = false, version = "0.3.0-dev0"}
futures = {workspace = true}
memchr = "2.7.6"
parking_lot = {workspace = true}
pyo3 = {workspace = true, optional = true}
rayon = {workspace = true}
serde = {workspace = true}
smallvec = {workspace = true}
snafu = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}

[features]
python = ["dep:pyo3", "daft-common-error/python", "common-py-serde/python", "daft-core/python", "daft-io/python", "daft-recordbatch/python", "daft-dsl/python"]

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-csv"
repository = {workspace = true}
license = {workspace = true}
description = "CSV reader for Daft"
version = {workspace = true}
