[dependencies]
anyhow = "1.0"
chrono = {workspace = true, features = ["serde"]}
clap = {version = "4.5.28", features = ["derive"]}
env_logger = "0.11.6"
fork = "0.2"
http-body-util = "0.1"
hyper = {features = ["full"], version = "1.6"}
hyper-staticfile = "0.10.1"
hyper-util = {features = ["tokio"], version = "0.1"}
parking_lot = "0.12"
serde_json = "1.0"
simdutf8 = "0.1"
log.workspace = true
pyo3.workspace = true
serde.workspace = true
tokio.workspace = true

[lints]
workspace = true

[package]
name = "daft-dashboard-server"
edition.workspace = true
version.workspace = true
