[dependencies]
async-stream = {workspace = true}
axum = "0.8"
daft-recordbatch = {path = "../daft-recordbatch", default-features = false, version = "0.3.0-dev0"}
common-metrics = {path = "../common/metrics", default-features = false, version = "0.3.0-dev0"}
tower = "0.5"
tower-http = {version = "0.6", features = ["fs", "trace", "cors"]}
include_dir = "0.7.4"
dashmap = {workspace = true}
pyo3 = {workspace = true, optional = true}
serde_json = {workspace = true}
tracing = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
futures = {workspace = true}
tokio-stream = {workspace = true, features = ["sync"]}
# Ideally want to use the same versions as Axum
mime = "*"
mime_guess = "*"

[features]
python = ["dep:pyo3", "daft-recordbatch/python", "common-metrics/python"]

[lints]
workspace = true

[package]
name = "daft-dashboard"
publish = false
repository = {workspace = true}
license = {workspace = true}
edition.workspace = true
version.workspace = true
