[dependencies]
atoi_simd = "0.16.1"
arrow-schema = {workspace = true}
arrow-array = {workspace = true}
daft-arrow = {path = "../daft-arrow"}
daft-schema = {path = "../daft-schema"}
chrono = {workspace = true}
csv-async = "1.2.6"
fast-float2 = "0.2.3"
simdutf8 = {workspace = true}

[lints]
workspace = true

[package]
edition = {workspace = true}
name = "daft-decoding"
version = {workspace = true}
